[tool.poetry]
name = "nhanes-gpt"
version = "0.1.0"
description = "ELT of NHANES data and LLM processes for analyzing it"
authors = ["B. Ross Katz", "Alexander J. Titus"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
bs4 = "^0.0.1"
ipykernel = "^6.26.0"
jupyterlab-code-formatter = "^2.2.1"
black = "^23.10.1"
isort = "^5.12.0"
lxml = "^4.9.3"
google-cloud-storage = "^2.13.0"
google-cloud-bigquery = "^3.13.0"
pandas-gbq = "^0.19.2"
google-api-python-client = "^2.106.0"
duckdb = "^0.9.1"
notebook = "^7.0.6"
jupysql = "^0.10.3"
matplotlib = "^3.8.1"
duckdb-engine = "^0.9.2"
python-dotenv = "^1.0.0"
sqlfluff = "^2.3.5"
dbt = "^1.0.0.34.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
